--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Heroku Playwright Example</title>
+    <title>Dino-AI</title>
     <link rel="icon"
         href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎭</text></svg>">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.0/css/bulma.min.css"
@@ -17,7 +17,7 @@
         <div class="hero-body">
             <div class="container">
                 <h1 class="title">
-                    Heroku Playwright Example
+                    Dino-AI
                 </h1>
                 <h2 class="subtitle">
                     This example showcases Playwright running on Heroku with the <a
