fixed prettyier issue 2

--- a/public/index.html
+++ b/public/index.html
@@ -243,9 +243,9 @@
         </div>
       </div>
       <div class="notification">
-        Key Features:
+        <em>Key Features:</em>
 
-        <p></p>
+        <p>
           <b>Tag Generation:</b> Say goodbye to the guesswork! Our app utilizes
           advanced algorithms to generate a comprehensive list of relevant tags
           tailored to your video topic. Increase your video's discoverability
