dyno domain cors

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       }
 
       header {
-        background-color: #af0000ad; /* Eye-catching blue background */
+        background-color: #f00; /* Eye-catching blue background */
         color: #fff; /* White text color */
         padding: 20px 0; /* Vertical and horizontal padding */
         text-align: center; /* Center-align text */
@@ -48,7 +48,7 @@
       }
 
       :root {
-        --primary-color: #ff0000af;
+        --primary-color: #f00;
         --secondary-color: #333;
         --background-color: #f7f7f7;
       }
@@ -183,7 +183,7 @@
       <div class="hero-body">
         <div class="container">
           <h2 class="subtitle">
-            Unlock the full potential of your YouTube channel with the Dino-YT –
+            Unlock the full potential of your YouTube channel with the Dyno-YT –
             your ultimate companion for creating captivating and discoverable
             video content. Designed for YouTubers of all experience levels, this
             powerful tool simplifies the content creation process, making it
@@ -194,7 +194,7 @@
       </div>
     </section>
     <div class="container pb-5">
-      <div class="notification">Try Searching Your Title or a Topic</div>
+      <div class="notification">Search Your Title or a Topic</div>
       <div class="notification">
         <div class="field has-addons">
           <div class="control">
@@ -214,9 +214,7 @@
             />
           </div>
           <div class="control">
-            <a class="button is-info" id="btn-run">
-              Search a topic on YouTube
-            </a>
+            <a class="button is-info" id="btn-run"> Search </a>
           </div>
         </div>
       </div>
